--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,15 +39,16 @@
         -->
 
         <meta-data
-
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
         <activity
             android:name=".UserActivity"
-            android:label="@string/title_activity_user">
-
-        </activity>
+            android:label="@string/title_activity_user" />
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps" />
+        <activity android:name=".TravelSiteActivity"></activity>
     </application>
 
 </manifest>
