--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".TravelSiteActivity"></activity>
+        <activity android:name=".SiteActivity"></activity>
     </application>
 
 </manifest>
