--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".UserActivity"
+            android:name=".UserEditActivity"
             android:label="@string/title_activity_user" />
         <activity
             android:name=".MapsActivity"
