building recyclerview on gallery

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".GalleryActivity"></activity>
+        <activity android:name=".AdvancedGalleryActivity"></activity>
     </application>
 
 </manifest>
