--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,11 @@ dependencies {
     implementation 'com.android.support:support-v4:26.1.0'
     implementation "com.google.android.gms:play-services-location:11.0.1"
     implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.google.firebase:firebase-database:11.8.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'com.google.maps.android:android-maps-utils:0.5+'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.google.maps.android:android-maps-utils:0.5+'
 }
+
+apply plugin: 'com.google.gms.google-services'
